<resources>
    <string name="app_name">GoldenRecall</string>

    <string name="memory_master">Golden Recall</string>
    <string name="score">0</string>
    <string name="owner">Alucard</string>
    <string name="start">start</string>
    <string name="subTitle">Unlock Your Golden Memory</string>
    <string name="highestScore">0</string>
    <string name="highest_score">Highest score:</string>

</resources>